--- a/style.css
+++ b/style.css
@@ -20,8 +20,11 @@ body {
 }
 
 .main > .content img {
-    width: 1000px;
-    height: 100px;
+    width: 500px;
+    height: 250px;
+    z-index: -10;
+    opacity: 0%;
+    margin-top: 700px;  /* Зсуває зображення вниз на 10px */
 }
 
 /* Вертикальні смуги */
@@ -42,6 +45,39 @@ body::before {
 
 body::after {
     right: 0;
+}
+.thin-stripe {
+    position: absolute;
+    top: 150px;
+    left: 960px; /* або right: 0; для правої смуги */
+    width: 3px;  /* Тонка смуга */
+    height: 230px;
+    background-color: rgb(109, 105, 106); /* Колір для тонкої смуги */
+    z-index: 1000;
+    border-radius: 10px; /* Додаємо округлені кути */
+}
+.thin-stripe2 {
+    position: absolute;
+    top: 150px;
+    left: 600px; /* або right: 0; для правої смуги */
+    width: 3px;  /* Тонка смуга */
+    height:190px;
+    background-color: rgb(109, 105, 106); /* Колір для тонкої смуги */
+    z-index: 1000;
+    border-radius: 10px; /* Додаємо округлені кути */
+}
+
+.Skills-block{
+    position: absolute;
+    top: 12.25%;
+    left: 75%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    border-radius: 10px;
+    width: 300px;
+    text-align: left; /* Вирівнювання тексту по лівому краю */
+    color: #1f1f1f;
+    font-family: sans-serif;
 }
 
 .Knowledge-block {
@@ -116,5 +152,5 @@ body::after {
 }
 
 .contacts a:hover {
-    color: #6d696a; /* Темніший колір при наведенні */
+    color: #131313; /* Темніший колір при наведенні */
 }
