--- a/style.css
+++ b/style.css
@@ -164,5 +164,13 @@ body::after {
 .contacts a:hover {
     color: #131313; /* Темніший колір при наведенні */
 }
+.my-gif {
+    width: 500px;       /* або 100%, або інші розміри */
+    height: auto;       /* щоб зберігати пропорції */
+    position: absolute; /* або relative/fixed залежно від того, що потрібно */
+    top: 700px;         /* відступ зверху */
+    left: 700px;         /* відступ зліва */
+    z-index: 10;        /* щоб не ховалась за іншими елементами */
+}
 
 
