--- a/style.css
+++ b/style.css
@@ -218,6 +218,24 @@ body::after {
     height: auto;
     flex: 1 1 300px; /* адаптивне розширення */
 }
+.mainProgramming {
+    text-align: center;
+}
+.image-gallery {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1px; /* Відстань між зображеннями */
+    justify-content: center; /* Або flex-start / space-between */
+    align-items: flex-start;
+}
+
+.image-gallery img {
+    width: auto;
+    height: auto;
+    max-width: 700px;  /* або свої розміри */
+    border-radius: 10px;
+    object-fit: cover;
+}
 
 
 
